--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 *.DS_Store
-.vscode
+
+# PlatformIO
+.pio
+
+# VSCode
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
 
 # ESP
 build/
