--- a/examples/google_storage/platformio.ini
+++ b/examples/google_storage/platformio.ini
@@ -7,4 +7,4 @@ platform = espressif32
 board = esp32cam
 framework = espidf
 monitor_speed = 115200
-board_build.partitions = partitions_singleapp.csv
+board_build.partitions = custom_partitions.csv
